tests/errors/test_26.x
// Do while conditional is not boolean

fn main() -> i64 {

    do {

    } while 'c';

}